--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
   "type": "commonjs",
   "dependencies": {
     "axios": "^1.12.2",
+    "canvas": "^3.2.0",
     "cors": "^2.8.5",
-    "express": "^5.1.0"
+    "dotenv": "^17.2.3",
+    "express": "^5.1.0",
+    "mysql2": "^3.15.3"
   }
 }
